[package]
version = "1.1.8"
authors = ["Kornel <kornel@geekhood.net>"]
description = "Unreliable bindings for libpng 1.6. They're likely to bring sorrow and regret. Please use a native Rust PNG library instead (e.g. LodePNG 2.0)"
documentation = "http://libpng.org/pub/png/libpng-manual.txt"
homepage = "http://www.libpng.org/pub/png/libpng.html"
license = "Libpng"
links = "png"
name = "libpng-sys"
readme = "README.md"
repository = "https://github.com/kornelski/rust-libpng-sys.git"
include = ["README.md", "Cargo.toml", "src/*.rs", "build.rs", "/vendor/*.c", "/vendor/*.h", "/vendor/arm/*.c", "/vendor/arm/*.h", "/vendor/arm/*.S", "vendor/scripts/pnglibconf.h.prebuilt"]
edition = "2018"

[build-dependencies]
cc = "1.0.38"
pkg-config = "0.3.15"
dunce = "1.0.0"

[dependencies]
libc = "0.2.60"
libz-sys = { version = "1.0.25", optional = true }
cloudflare-zlib-sys = { version = "0.2.0", optional = true }

[features]
default = ["libz-sys"]
build = ["static"]
static = []
static-libz = ["libz-sys/static"]
