[package]
version = "1.1.9"
authors = ["Kornel <kornel@geekhood.net>"]
description = "Unreliable bindings for libpng 1.6. They're likely to bring sorrow and regret. Please use a native Rust PNG library instead (e.g. LodePNG 2.0)"
documentation = "http://libpng.org/pub/png/libpng-manual.txt"
homepage = "http://www.libpng.org/pub/png/libpng.html"
license = "Libpng"
links = "png"
name = "libpng-sys"
readme = "README.md"
repository = "https://github.com/kornelski/rust-libpng-sys.git"
include = ["README.md", "Cargo.toml", "src/*.rs", "build.rs", "/vendor/*.c", "/vendor/*.h", "/vendor/arm/*.c", "/vendor/arm/*.h", "/vendor/arm/*.S", "vendor/scripts/pnglibconf.h.prebuilt"]
edition = "2021"
categories = ["multimedia::images"]
keywords = ["png", "codec", "ffi", "bindings"]

[build-dependencies]
cc = "1.0.72"
pkg-config = "0.3.24"
dunce = "1.0.2"

[dependencies]
libc = "0.2.113"
libz-sys = { version = "1.1.3", optional = true }
cloudflare-zlib-sys = { version = "0.3.0", optional = true }

[features]
default = ["libz-sys"]
build = ["static"]
static = []
static-libz = ["libz-sys/static"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[badges]
maintenance = { status = "deprecated" }
