[package]
version = "1.1.10"
authors = ["Kornel <kornel@geekhood.net>"]
description = "Unreliable bindings for libpng 1.6. They're likely to bring sorrow and regret. Please use a native Rust PNG library instead."
documentation = "http://libpng.org/pub/png/libpng-manual.txt"
homepage = "http://www.libpng.org/pub/png/libpng.html"
license = "Libpng"
links = "png"
name = "libpng-sys"
readme = "README.md"
repository = "https://github.com/kornelski/rust-libpng-sys.git"
include = ["README.md", "Cargo.toml", "src/*.rs", "build.rs", "/vendor/*.c", "/vendor/*.h", "/vendor/arm/*.c", "/vendor/arm/*.h", "/vendor/arm/*.S", "vendor/scripts/pnglibconf.h.prebuilt"]
edition = "2021"
categories = ["multimedia::images"]
keywords = ["png", "codec", "ffi", "bindings"]

[build-dependencies]
cc = "1.1.20"
pkg-config = "0.3.24"
dunce = "1.0.5"

[dependencies]
libc = "0.2.150"
libz-sys = { version = "1.1.20", optional = true }
cloudflare-zlib-sys = { version = "0.3.3", optional = true }

[features]
default = ["libz-sys"]
build = ["static"]
static = []
libz-sys = ["dep:libz-sys"]
# You must disable `libz-sys` feature for this to work
cloudflare-zlib-sys = ["dep:cloudflare-zlib-sys"]
static-libz = ["libz-sys/static"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[badges]
maintenance = { status = "deprecated" }
